Created +error.svelte for error pages updated homepage to remove some styling in favor of tailwind resolved conflicts with classes names and daisyUI classes added bold and black Avenir font-face to app.html

--- a/src/app.html
+++ b/src/app.html
@@ -20,6 +20,17 @@
 @font-face {
   font-family: "Avenir";
   src: url("/fonts/avenir.otf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "AvenirBold";
+  src: url("/fonts/avenir-bold.otf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "AvenirBlack";
+  src: url("/fonts/avenir-black.otf");
+  font-weight: normal;
 }
 	body {
         color: #0B0A0A;
